# vice-next-mcp

./: .gitignore  BUGS.md  CONTRIBUTING.md  COPYING  DESIGN.md  FEATURES.md  MANIFEST.in  MANUAL.md  README.md  SHA256SUMS.txt  VALIDATION.md  __init__.py  monitor.py  pyproject.toml  runtime.json  supervisor.py  transport.py
.github/workflows/: ci.yml  release.yml
docs/: companion-regression-matrix.json  companion-regression-validation.md  evidence-sufficiency-review.md  hardware-readiness-checklist.json  hardware-readiness-plan.md  harness-audit.md  harness-guide.md  migration-guide.md  protocol-candidate-comparison.md  validation-w3-bcd.md  vice-instrumentation-plan.md  w3-a2-validation.md  w3-b-live-keyboard.md  w3-bcd-results.json  w6d-conformance.md
examples/: cases.json  single_smoke.py
schemas/: api.schema.json  request.schema.json
src/vice_next_mcp/: __init__.py  batch.py  capture.py  catalog.py  cli.py  errors.py  iec_capture.py  keyboard.py  live_mcp.py  model.py  monitor.py  monitor_sync.py  operations.py  process.py  pytest_plugin.py  server.py  snapshot.py  supervisor.py  trace.py  transport_runtime.py
tests/: conftest.py  test_batch.py  test_core_server.py  test_docs_smoke.py  test_iec_capture_runtime.py  test_live_mcp_capture.py  test_live_runtime.py  test_machine_support.py  test_monitor_registers.py  test_native_monitor_parity.py  test_parallel_isolation.py  test_restore_protocol.py  test_snapshot_trace.py  test_stepping.py  test_transport.py  test_w3_a2_isolation.py  test_w3_validation.py
tools/: validate_distributions.py
validation/: conformance_matrix.py  live_drive_effects.py  live_effects.py  live_keyboard_feed.py  live_keyboard_matrix.py  live_mcp_effects.py  live_randomized_isolation.py  live_supervisor_soak.py  live_w3.py  native_monitor_parity.py
validation/results/: native_monitor_parity.json  w3-b-keyboard-feed-live.json  w3-b-keyboard-matrix-live.json  w6d-smoke.json
validation/results/batch-live-smoke/96a997e617e3487cb12632ba72e8fa8a/: results.csv  results.json
validation/results/batch-live-smoke/96a997e617e3487cb12632ba72e8fa8a/d6b644798336a1f3/: case.json
validation/results/config-default-regression/: live-supervisor-soak.json
validation/results/config-default-smoke/: live-supervisor-soak.json
validation/results/live-randomized-isolation/: live-randomized-isolation.json
validation/results/live-supervisor-soak/: live-supervisor-soak.json
validation/results/live-supervisor-soak-x128/: live-supervisor-soak.json
validation/results/live-supervisor-soak8/: live-supervisor-soak.json
validation/results/live-w3-a2/: live-isolation.json  live-w3.json
validation/results/live-w3-a2-soak10/: live-w3.json
validation/results/live-w3-effects/: live-drive-effects.json  live-effects.json  live-mcp-effects.json  state.vsf
validation/results/live-w3-effects-final/: live-effects.json  state.vsf
validation/results/live-w4d-c128/: live-w3.json
