[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vice-next-mcp"
version = "0.1.0"
license = {file = "COPYING"}
classifiers = ["License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)"]
requires-python = ">=3.11"

[project.scripts]
vice-next = "vice_next_mcp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: requires an installed official VICE executable"]
