[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vice-next-mcp"
version = "0.1.0"
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "black>=24", "mypy>=1.10", "build>=1.2"]

[project.scripts]
vice-next = "vice_next_mcp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: requires an installed official VICE executable"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build", "validation/results"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E401", "E701", "E702", "E731", "F401", "F403", "F405", "F811"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "build|validation/results"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
# The runtime integrates with asyncio subprocess and platform-specific process
# APIs whose stubs vary between mypy versions.  Keep mypy useful for the
# typed public surface while allowing these implementation details to evolve.
disable_error_code = ["no-untyped-def", "var-annotated", "assignment", "arg-type", "attr-defined"]
